[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "korea-weather-mcp"
version = "0.1.0"
description = "MCP server for Korean weather forecasts using KMA API"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "wowzoo", email = "wowzoo@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.3.4",
]

[project.urls]
Homepage = "https://github.com/wowzoo/korea-weather-mcp"
Repository = "https://github.com/wowzoo/korea-weather-mcp"
Issues = "https://github.com/wowzoo/korea-weather-mcp/issues"

[project.scripts]
korea-weather-mcp = "weather:main"
